// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test NotFoundPage NotFoundPage should render correctly, when user is logged in 1`] = `
<div>
  <div>
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
                style="display: flex;"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/favorites"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                  />
                  <span
                    class="header__user-name user__name"
                  >
                    test@gmail.com
                  </span>
                </a>
                <button
                  style="margin-left: 10px;"
                >
                  Log Out
                </button>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main>
      <section
        style="margin: 150px auto; width: 420px; text-align: center;"
      >
        <h1
          style="padding: 20px 0px 80px;"
        >
          404: Page is not found
        </h1>
        <a
          class="button form__submit"
          href="/"
        >
          Go back to the main page
        </a>
      </section>
    </main>
    <footer
      class="footer container"
    >
      <a
        class="footer__logo-link"
        href="/"
      >
        <img
          alt="6 cities logo"
          class="footer__logo"
          height="33"
          src="img/logo.svg"
          width="64"
        />
      </a>
    </footer>
  </div>
</div>
`;

exports[`Test NotFoundPage NotFoundPage should render correctly, when user is not logged in 1`] = `
<div>
  <div>
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
                style="display: flex;"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/login"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                  />
                  <span
                    class="header__login"
                  >
                    Sign in
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main>
      <section
        style="margin: 150px auto; width: 420px; text-align: center;"
      >
        <h1
          style="padding: 20px 0px 80px;"
        >
          404: Page is not found
        </h1>
        <a
          class="button form__submit"
          href="/"
        >
          Go back to the main page
        </a>
      </section>
    </main>
    <footer
      class="footer container"
    >
      <a
        class="footer__logo-link"
        href="/"
      >
        <img
          alt="6 cities logo"
          class="footer__logo"
          height="33"
          src="img/logo.svg"
          width="64"
        />
      </a>
    </footer>
  </div>
</div>
`;
